# epistruct

./: .gitignore  .pr_agent.toml
.claude/: CLAUDE.md  settings.json
.claude/diagnostics/: changes.jsonl  errors.jsonl  knowledge.jsonl  skills.jsonl
.claude/knowledge/: _catalog.md
.claude/notes/: INDEX.md  alembic-setup-concepts.md  embedding-vs-llm-models.md  fastapi-middleware.md  (+9 more)
epistruct-api/: .env.example  docker-compose.yml  pyproject.toml
epistruct-api/alembic/: env.py
epistruct-api/alembic/versions/: 76dd8cfdc9c4_init.py
epistruct-api/src/: main.py
epistruct-api/src/core/: config.py  database.py  dependencies.py  events.py  exceptions.py  router.py  security.py
epistruct-api/src/modules/ai_pipeline/repositories/: __init__.py  chunk_model.py  source_model.py
epistruct-api/src/modules/auth/: dependencies.py  router.py  schemas.py
epistruct-api/src/modules/auth/domain/: entities.py  repositories.py
epistruct-api/src/modules/auth/repositories/: __init__.py  repositories.py  user_model.py
epistruct-api/src/modules/auth/services/: services.py
epistruct-api/src/modules/knowledge/repositories/: __init__.py  node_lineage_model.py  node_model.py  node_proposal_model.py  node_relationship_model.py  node_source_model.py
epistruct-api/src/modules/space/: router.py
epistruct-api/src/modules/space/repositories/: __init__.py  group_model.py  space_model.py  strategy_model.py
epistruct-api/src/shared/: types.py
epistruct-api/tests/architecture/: test_boundaries.py
epistruct-app/: app.json  eslint.config.js  package.json  pnpm-lock.yaml
(+48 files in other folders)
